--- a/siteweb/templates/siteweb/index.html
+++ b/siteweb/templates/siteweb/index.html
@@ -4,11 +4,47 @@
 <head>
     <meta charset="UTF-8">
     <title>Minha Página</title>
+
+         <!--Fonts-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+        <!--Estilos-->
         <link rel="stylesheet" href="{% static 'css/global.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        <link rel="stylesheet" href="{% static 'css/header.css' %}">
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-    <h1>Bem-vindo ao meu site!</h1>
-    <p>Essa página foi feita no Django com HTML e CSS.</p>
+    {% include 'componentes/header.html' %}
+
+    <section class="formDadosLoja">
+        <form method="POST" action="{% url 'raspar_loja' %}" class="dadosVendedor">
+            {% csrf_token %}
+            <fieldset>
+                <label for="nomeLoja">nome</label>
+                <input type="text" name="nomeLoja" id="urlLoja">
+            </fieldset>
+            <fieldset>
+                <label for="urlLoja">link da loja</label>
+                <input type="text" name="urlLoja" id="urlLoja">
+            </fieldset>
+            <input type="submit" value="Buscar">
+        </form>
+    </section>
+
+    <section class="lojasSalvas">
+        <h2 class="titleLojasSalvas">Lojas salvas</h2>
+        <div class="contaiLojasSalvas">
+            {% for loja in lojas%}
+             <div class="cardLoja">
+                <h2 class="titleLoja">Nome:{{loja.nome}}</h2>
+                <p class="urlLoja">Url: {{loja.url}}</p>   
+            </div>
+            {% endfor %}
+        </div>
+    </section>
+
+     <script src="{% static 'js/scripts.js' %}"></script>
 </body>
 </html>
