--- a/siteweb/templates/siteweb/index.html
+++ b/siteweb/templates/siteweb/index.html
@@ -44,6 +44,7 @@
                 <button type="submit" class="cardLoja">
                 <h2 class="titleLoja">Nome: {{ loja.nome }}</h2>
                 <p class="urlLoja">Url: {{ loja.url }}</p>
+                <p>Id: {{loja.keyLoja}}</p>
                 <!--keyLoja-->
                 </button>
             </form>
