--- a/siteweb/static/css/style.css
+++ b/siteweb/static/css/style.css
@@ -66,7 +66,9 @@ font: normal 600 1.2em var(--fontPrimaria);
     padding: 2px 8px;
 }
 .urlLoja{
-    font: normal 500 1em var(--fontPrimaria);
+    display: block;
+    font: normal 500 0.6em var(--fontPrimaria);
     color: #00000072;
+    overflow: hidden;
 }  
            
