melhorias no sistema de análise de concorrência
- Adicionada rodinha de carregamento durante raspagem de loja
- Aprimorada função de salvar loja com persistência no banco de dados
- Implementada raspagem de loja e seleção de produtos
- Raspagem de concorrentes dos produtos selecionados na Amazon
- Análise via IA para verificar similaridade entre concorrentes e produto original
- Geração de arquivo Parquet com dados dos concorrentes
- Novo sistema de cache para raspagens com fallback para banco de dados
- Funções de tratamento e limpeza de dados
- Atualizações nos estilos da página para melhor experiência visual

--- a/siteweb/static/css/comparador.css
+++ b/siteweb/static/css/comparador.css
@@ -15,10 +15,12 @@ body{
     display: flex;
     align-items: center;
     gap: 1px;
+    max-width: 100%;
     overflow: hidden;
 }
 .containProdutosRasp{
     border: 1px solid rgba(0, 0, 0, 0.322);
+    overflow: hidden;
 }
 /*Card produto*/
 .cardProduto,.produtoRasp{
@@ -36,7 +38,8 @@ body{
   transform: translateY(-2px);
 }
 .cardProduto .imgProduto,.produtoRasp .imgProduto{
-    height: 110px;
+    
+    width: 80px;
     padding-top: 5px;
     margin: 0 auto;
 }
