--- a/siteweb/templates/siteweb/detalhesLoja.html
+++ b/siteweb/templates/siteweb/detalhesLoja.html
@@ -14,6 +14,10 @@
     <link rel="stylesheet" href="{% static 'css/detalhesLoja.css' %}">
 </head>
 <body>
+    <div id="loading" >
+        <div class="spinner"></div>
+        <p>Carregando produtos, por favor aguarde...</p>
+     </div>
     {% include 'componentes/header.html' %}
     <section class="dadosLoja">
         <div class="dads1Loja">
@@ -26,7 +30,8 @@
                 <button class="btnSalvar"
                     onclick="salvarLoja(this)"
                     data-nome="{{ loja.nome }}" 
-                    data-url="{{ loja.url }}">SALVAR LOJA</button>
+                    data-url="{{ loja.url }}"
+                    >SALVAR LOJA</button>
                 <button class="btnRecarregar"
                     onclick="recarregarProd(this)"
                      data-nome="{{ loja.nome }}" 
@@ -77,11 +82,6 @@
                     <span class="conMenorValor">
                         <p class="valor">{{produto.preco|formata_moeda }}</p>
                     </span>
-                    <button class="btnComparar" onclick="detalhes_produto(this)"
-                        
-                    >
-                        Comparar produto
-                    </button>
                 </div>
             {% endfor %}
         </div>
@@ -93,12 +93,18 @@
             .filter(checkbox => checkbox.checked)
             .map(checkbox =>({
                 nome: checkbox.dataset.nomeproduto,
-                preco: checkbox.dataset.precoproduto,
+                preco: checkbox.dataset.precoproduto.replace("R$", "").replace(/\s/g, "").replace(",", "."),
                 imagem: checkbox.dataset.imagemproduto
             }));
             console.log(checkedBoxes)
-
-            
+            const loading = document.getElementById("loading");
+            loading.style.display = "flex"; 
+             window.scrollTo({
+                top: 0,
+                behavior: "smooth"
+            });
+            page = document.getElementsByTagName("body")[0];
+            page.style.overflow = "hidden"
             fetch("{% url 'comparador' %}", {
                 method: 'POST',
                 headers:{
@@ -109,6 +115,7 @@
             })
             .then(response=> response.text())
             .then(html =>{
+                loading.style.display = "none";
                    document.open();
                     document.write(html);
                     document.close();
@@ -141,6 +148,13 @@
         function salvarLoja(dados){
             const nomeLoja = dados.dataset.nome;
             const urlLoja = dados.dataset.url;
+            const produtosLoja = Array.from(document.querySelectorAll('.checkCard'))
+            .map(dados =>({
+                nome: dados.dataset.nomeproduto,
+                preco: dados.dataset.precoproduto,
+                imagem: dados.dataset.imagemproduto
+            }));
+            console.log(`Passando ${produtosLoja.length} produtos`)
             console.log("Loja: "+ nomeLoja +"| Url: "+ urlLoja);
             fetch("{% url 'salvar_loja' %}", {
                 method: "POST",
@@ -150,7 +164,8 @@
                 },
                 body: JSON.stringify({
                     nome: nomeLoja,
-                    url: urlLoja
+                    url: urlLoja,
+                    produtosLoja:produtosLoja
                 })
             })
             .then(response => response.json())
@@ -158,10 +173,6 @@
                 alert(data.mensagem);
             });
         }
-        /*function detalhes_produto(dado){
-            
-          
-        }*/
     </script>
 </body>
 </html>
