--- a/siteweb/templates/siteweb/comparador.html
+++ b/siteweb/templates/siteweb/comparador.html
@@ -14,9 +14,23 @@
     <link rel="stylesheet" href="{% static 'css/comparador.css' %}">
 </head>
 <body>
+    
     {% include 'componentes/header.html' %}
+    <button onclick="abrirModal()">Abrir Modal</button>
+
+<!-- Estrutura do modal -->
+<div id="meuModal" class="modal">
+  <div class="modal-conteudo">
+    <span class="fechar" onclick="fecharModal()">&times;</span>
+    <h2>Olá, John!</h2>
+    <p>Esse é seu modal bonitinho 😎</p>
+  </div>
+</div>
+
     <h1 class="titlecomparador">Comparar Produto</h1>
-    <a href="{{ url_download }}" download>Baixar Comparação</a>
+    <a href="{{ destino_nao }}" download>Baixar Produtos incompativeis</a>
+    <a href="{{ destino_sim }}" download>Baixar Produtos compativeis</a>
+    <button onclick="abrirModal('{{resultados_sim}}')">compararValores</button>
     <section class="produtosComparados">
         {% for bloco in comparacoes%}
             <div class="containProdutosRasp">
@@ -41,6 +55,21 @@
             </div>
         {% endfor %}
     </section>
+
+    <script>
+        function abrirModal(resultados_sim) {
+            modalCompararValores(resultados_sim)
+            document.getElementById("meuModal").style.display = "block";
+        }
+
+        function fecharModal() {
+            document.getElementById("meuModal").style.display = "none";
+        }
+
+        function modalCompararValores(resultados_sim){
+            console.log(resultados_sim)
+        }
+    </script>
 
 </body>
 </html>
