--- a/siteweb/templates/siteweb/detalhesLoja.html
+++ b/siteweb/templates/siteweb/detalhesLoja.html
@@ -94,6 +94,7 @@
                     <span class="conMenorValor">
                         <p class="valor">{{produto.preco|formata_moeda }}</p>
                     </span>
+                    <a href="{{produto.url}}" target="_blank">Abrir no site</a>
                 </div>
             {% endfor %}
         </div>
